[package]
name = "lazing"
version = "0.1.0"
authors = ["ywxt <ywxtcwh@qq.com>"]
edition = "2018"
description = "A macro like lazy_static can initialize static variables."
license = "MIT"
documentation = "https://docs.rs/lazing"
readme = "README.md"
homepage = "https://github.com/ywxt/lazing"
repository = "https://github.com/ywxt/lazing"
keywords = ["lazy", "init", "static"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = { version = "1.0", features = ["nightly"] }
[lib]
proc-macro = true
